@@ -1,5 +1,7 @@
 Revision history for Perl extension Per-MinimumVersion
 
+        - 5.8 and 5.6 pragmas (Alexandr Ciornii)
+
 1.19 Sun 14 Sep 2008
 	- Updating PPI and several other dependencies to get a more
 	  accurate parse on which to run the analysis.
